Bug 1202012: Use QTv2 header when available. r=rillian